Fix header heiarchy on index, unset flx wrap on nav

--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ html {
 }
 
 .top a {
-  max-width: 50%;
+  max-width: 100%;
 }
 
 .top img {
@@ -52,6 +52,7 @@ html {
 
 .top {
   padding: 0 2rem !important;
+  flex-wrap: unset !important;
 }
 
 .navbar-expand-md .navbar-nav .nav-link {
@@ -85,16 +86,22 @@ html {
   animation: slideIn 0.6s 0.5s forwards;
 }
 
-.bannerContent h1, .bannerContent .h1 {
+.bannerContent h2, .bannerContent .h2 {
   font-size: 4rem;
   transform: translateX(-100rem);
   animation: slideIn 0.8s 0.5s forwards;
 }
 
-.bannerContent p {
+.bannerContent .p1 {
   font-size: 1.5rem;
   transform: translateX(-100rem);
   animation: slideIn 1s 0.5s forwards;
+}
+
+.bannerContent .p2 {
+  font-size: 1.5rem;
+  transform: translateX(-100rem);
+  animation: slideIn 1.2s 0.5s forwards;
 }
 
 @keyframes slideIn {
